<resources>
    <string name="app_name">EService</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">E-mail</string>
    <string name="enter">Вход</string>
    <string name="invalid_email">Невалидный email</string>
    <string name="invalid_password">Невалидный пароль</string>
    <string name="auth_error">Неверный логин или пароль</string>


    <string name="education_card_title">Учебная карточка</string>
    <string name="education_card_msg">Доступ к учебному плану обучающегося</string>
    <string name="education_card_msg_more"> • Доступ к рабочим программам дисциплин/практик обучающего\n • Фиксация результатов промежуточной аттестации обучающегося\n • Фиксация хода образовательного процесса обучающегося\n • Список приказов по студенческому составу обучающегося\n • Документы и заявления обучающегося</string>
    <string name="more">Подробнее</string>
    <string name="logout">Выйти</string>
    
    <string name="base_info_card_fio">ФИО:</string>
    <string name="base_info_card_birthday">Дата рождения:</string>
    <string name="base_info_card_address">Адреса:</string>
    <string name="base_info_card_faculty">Факультет:</string>
    <string name="base_info_card_education_program">Образовательная программа:</string>
    <string name="base_info_card_form_education">Форма обучения:</string>
    <string name="base_info_card_course_education">Курс:</string>
    <string name="base_info_card_financy">Финансирование:</string>
    <string name="base_info_card_education_time">Срок обучения:</string>

    <string name="education_program_table_name">Наименование</string>
    <string name="education_program_table_control_form">Форма контроля</string>
    <string name="education_program_table_control_hours">Объём (часов)</string>
    
    <string name="education_program_block_title">Учебный план (аннотация)</string>
    <string name="semest">%s семестр</string>

    <string name="education_card_documents">Документы</string>

    <string name="education_card_entries">Оценки</string>
    <string name="education_card_session">Семестр %s</string>

    <string name="education_card_orders">Приказы</string>
    <string name="schedule">Расписание</string>
</resources>